# overbridge-scenes

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  mise.toml  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
config/: default.json  linux-wine.json  mappings.example.json
crates/ob-morph/: Cargo.toml
crates/ob-morph/src/: lib.rs
crates/ob-remote-vst/: Cargo.toml
crates/ob-remote-vst/src/: client.rs  lib.rs
docs/: README.md  api-reference.md  architecture.md  hardware-sync.md
docs/active-issues/: audio-artifacts-duplex-monitoring.md  jitter-on-param-sync.md
docs/designs/: audio-and-control-api.md  audio-cutout-and-duplex-fix.md  audio-routing-and-control-options.md  linux-overbridge-testing.md  overbridge-param-sync.md  scenes-crossfader.md  vst3-hosting.md
docs/machines/: analog-heat-mk2.md
scripts/: build-remote-vst.sh  copy-plugins.sh  record-demo-videos.mjs  setup.sh  start-engine.sh  test-params.sh  test.sh  wine-extract-overbridge.sh  yabridge-install.sh
src/: api.rs  bin_main.rs  config.rs  crossfader.rs  devices.rs  engine.rs  lib.rs  main.rs  match_devices.rs  net_util.rs  scenes_store.rs  state.rs  test_support.rs
src/host/: audio.rs  audio_device.rs  control.rs  coreaudio_duplex.rs  editor_macos.rs  fake_plugin.rs  gui_macos.rs  mod.rs  param_sync.rs  param_sync_pump.rs  plugin_backend.rs  plugin_host.rs  test_params.rs
src/midi/: mapper.rs  mod.rs  monitor.rs
src/testing/: api.rs  fake_plugin.rs  host.rs  midi.rs  mod.rs  param_sync.rs  plugin_contract.rs  scenes_api.rs
tests/: e2e_params.rs
web/: app.js  curves.css  curves.html  curves.js  device-header.css  device-header.js  home.css  home.js  index.html  page-header.css  parameters.html  remote.css  remote.html  remote.js  scenes-morph.mjs  scenes-morph.test.mjs  scenes-xf-pad.mjs  scenes.css  scenes.html  scenes.js  style.css  sweep-curves.mjs  sweep-curves.test.mjs  theme.css  theme.js
