[package]
name = "overbridge-host"
version = "0.1.0"
edition = "2021"
description = "Local VST host for Elektron Overbridge with programmatic control API"
license = "MIT"

[lib]
name = "overbridge_host"
path = "src/lib.rs"

[[bin]]
name = "ob-host"
path = "src/main.rs"

[features]
default = []
test-support = []

[dependencies]
truce-rack = { version = "1.1.5", default-features = false, features = ["vst3"] }
truce-rack-vst3 = { path = "vendor/truce-rack-vst3" }
truce-rack-core = "1.1.5"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
midir = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSView", "NSWindow"] }
dispatch = "0.2"
baseview = "0.1"
raw-window-handle = "0.5"

[patch.crates-io]
truce-rack-vst3 = { path = "vendor/truce-rack-vst3" }
