[package]
name = "ob-remote-vst"
version = "0.1.0"
edition = "2021"
description = "Thin VST3 remote control for Overbridge Scenes (proxies to ob-host HTTP API)"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
